# FooLang

./: Cargo.toml  README.md
.github/workflows/: publish.yaml  workflow.yaml
crates/lexer/: Cargo.toml
crates/lexer/benches/: lexer_benchmark.rs
crates/lexer/benches/data/: math_data.txt
crates/lexer/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
src/: lib.rs
