[package]
name = "lexer"
version = "0.1.0"
authors = ["Filip Andersson"]
edition = "2018"

[dependencies]
types = { path = "../types" }
nom = { version = "6.1", features = ["regexp"] }
regex = "1.4"
once_cell = "1.7"
anyhow = "1.0"


[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "lexer_benchmark"
harness = false
